[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }

# shared — compile on both WASM and server
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# server-only (gated as optional per-package)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["trace"] }
jsonwebtoken = "9"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
rand = "0.9"
futures-util = "0.3"
